--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,5 +27,11 @@ jobs:
     - name: Test
       run: go test -v ./...
 
-    - name: Deb
-      run: go deb -v ./...
+    - name: Package .deb
+      run: make deb
+
+    - name: Upload .deb artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: lab-deb-package
+        path: myprogram.deb
