--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,10 +22,10 @@ jobs:
         go-version: '1.24'
 
     - name: Build
-      run: go build -v ./...
+      run: make build
 
     - name: Test
-      run: go test -v ./...
+      run: make test
 
     - name: Package .deb
       run: make deb
