--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -48,6 +48,11 @@ jobs:
       - name: Build Docker image
         run: |
           docker build --build-arg DEB_PACKAGE=myprogram.deb -t myapp:latest .
+      - name: Save Docker image as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: my-lab-app
+          path: my-lab-app.tar
       - name: Run Docker container
         run: |
           docker run --rm myapp --success
