--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -47,8 +47,13 @@ jobs:
           path: .
       - name: Build Docker image
         run: |
-          docker build --build-arg DEB_PACKAGE=myprogram.deb -t myapp:latest .
-      - name: Save Docker image as artifact
+          docker build -t my-lab-app .
+
+      - name: Save Docker image as tar file
+        run: |
+          docker save -o my-lab-app.tar my-lab-app
+
+      - name: Upload Docker image as artifact
         uses: actions/upload-artifact@v4
         with:
           name: my-lab-app
